# lexicon

./: .depcheckrc  .env.production.example  .eslintrc.cjs  .gitignore  ACCESSIBILITY_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  HARDCODED_VALUES_AUDIT.md  LICENSE  NOTICE  ONBOARDING_IMPLEMENTATION.md  OPTIMIZATION_NOTES.md  PHASE_6_COMPLETION_SUMMARY.md  PHASE_8_OPTIMIZATION_REPORT.md  PHASE_9_COMPLETION_REPORT.md  PROGRESS_SUMMARY.md  README.md  deployment_preparation_results.json  index.html  junit_results_20250720_171215.xml  package-lock.json  package.json  security_config.json  test_report_20250720_171215.html  test_results_20250720_171215.json  test_universal_validation.py  tsconfig.ci.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.test.ts  vitest.config.ts
.github/: SECRETS_SETUP.md
docs/: PRD-Lexicon.md  Tech_Spec_Lexicon.md  User_Experience.md  ci-cd-guide.md  cloud-backup-strategy.md  cloud-sync-implementation.md  lexicon-tasks.md  metadata.md
legacy/: ARCHITECTURE_EVOLUTION_ANALYSIS.md  ARCHITECTURE_EVOLUTION_EXPLANATION.md  REFACTORING_PROPOSAL.md  analyze_bg_completion.py  analyze_iso_completion.py  architecture_evolution_demo.py  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: dependency_installer.py  environment_health_check.py  quality_assessment.py  version_check.py
src-tauri/scripts/scraper/: requirements.txt  web_scraper.py
src-tauri/src/: background_tasks.rs  backup_manager.rs  batch_commands.rs  book_upload_commands.rs  cache_commands.rs  cache_manager.rs  catalog_commands.rs  cloud_sync_manager.rs  database.rs  database_commands.rs  environment_manager.rs  error_tracking.rs  export_commands.rs  file_system.rs  file_system_commands.rs  lib.rs  macos_integration.rs  main.rs  migration.rs  models.rs  notification_commands.rs  performance_commands.rs  performance_monitor.rs  processing_commands.rs  python_manager.rs  repository.rs  schema.rs  schema_version.rs  security_commands.rs  security_manager.rs  selector_commands.rs  semantic_search_commands.rs  state_manager.rs  sync_commands.rs  sync_commands_old.rs  sync_commands_tests.rs  tests.rs  validation.rs  visual_asset_commands.rs  web_scraper.rs  (+2 more)
(+246 files in other folders)
